backend/src/main/java/com/example/shop/common/error/InsufficientStockException.java
package com.example.shop.common.error;

public class InsufficientStockException extends RuntimeException {
    public InsufficientStockException(String message) {
        super(message);
    }
}
